#56 when entering tab view ensure active tab is visible

--- a/chrome/skin/common/tabview-frame.css
+++ b/chrome/skin/common/tabview-frame.css
@@ -580,7 +580,7 @@ input.name:focus::-moz-placeholder {
 }
 
 .groupItem:not(.stackedGroup) .stackExpander {
-	visibility: collapse;
+	display: none;
 }
 
 .stackExpander {
